# avr-hal

./: Cargo.toml
arduino_diecimila/prelude/: trait._.html  trait._embedded_hal_PwmPin.html  trait._embedded_hal_blocking_delay_DelayMs.html  trait._embedded_hal_blocking_delay_DelayUs.html  trait._embedded_hal_digital_InputPin.html  trait._embedded_hal_digital_OutputPin.html  trait._embedded_hal_digital_ToggleableOutputPin.html
arduino_leonardo/prelude/: trait._.html  trait._embedded_hal_PwmPin.html  trait._embedded_hal_blocking_delay_DelayMs.html  trait._embedded_hal_blocking_delay_DelayUs.html  trait._embedded_hal_digital_InputPin.html  trait._embedded_hal_digital_OutputPin.html  trait._embedded_hal_digital_ToggleableOutputPin.html
arduino_mega2560/prelude/: trait._.html  trait._embedded_hal_PwmPin.html  trait._embedded_hal_blocking_delay_DelayMs.html  trait._embedded_hal_blocking_delay_DelayUs.html  trait._embedded_hal_digital_InputPin.html  trait._embedded_hal_digital_OutputPin.html  trait._embedded_hal_digital_ToggleableOutputPin.html  trait._embedded_hal_serial_Read.html  trait._embedded_hal_serial_Write.html
arduino_uno/adc/: struct.Adc.html
arduino_uno/prelude/: trait._.html  trait._embedded_hal_PwmPin.html  trait._embedded_hal_blocking_delay_DelayMs.html  trait._embedded_hal_blocking_delay_DelayUs.html  trait._embedded_hal_digital_InputPin.html  trait._embedded_hal_digital_OutputPin.html  trait._embedded_hal_digital_ToggleableOutputPin.html  trait._embedded_hal_serial_Read.html  trait._embedded_hal_serial_Write.html  trait._embedded_hal_spi_FullDuplex.html
arduino_uno/spi/: struct.ChipSelectPin.html  struct.Spi.html
atmega1280_hal/clock/: struct.MHz1.html  struct.MHz12.html  struct.MHz16.html  (+3 more)
atmega328p_hal/: index.html
avr-hal-generic/: Cargo.toml
boards/arduino-nano-every/: Cargo.toml
boards/arduino-nano-every/.cargo/: config.toml
boards/arduino-nano-every/src/: lib.rs  pins.rs
chips/atmega4809-hal/: Cargo.toml
chips/atmega4809-hal/src/: lib.rs  port.rs
syn/: all.html  index.html
(+174 files in other folders)
