[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"

[workspace]
members = [
    # The generic hal definitions
    "avr-hal-generic",

    # The chip definitions
    "chips/atmega4809-hal",

    # The board crates
    "boards/arduino-nano-every",
]

[patch.crates-io]
# XXX: Temporary fix for avr-rust/rust#148
ufmt = { git = "https://github.com/Rahix/ufmt.git", rev = "12225dc1678e42fecb0e8635bf80f501e24817d9" }
