[package]
name = "arduino-nano-every"
version = "0.1.0"
authors = ["Tim Walls <tim.walls@snowgoons.com>", "Jonah Dahlquist <jonah@jonah.name>"]
edition = "2018"

[features]
default = ["rt"]
rt = ["atmega4809-hal/rt"]

[dependencies]
atmega4809-hal = { path = "../../chips/atmega4809-hal/" }
avr-hal-generic = { path = "../../avr-hal-generic/" }

[dev-dependencies]
panic-halt = "0.2.0"
nb = "0.1.2"
ufmt = "0.1.0"
avr-device = "0.2.2"
